Changes in version: JMbayes_0.8-7

  * corrected several small bugs in the code.
  * several updates in the shiny app.
  * added functions to select the optimal intervention time.

---------------------------------------

Changes in version: JMbayes_0.8-69

  * corrected floor ambiguity in C++.
  * added number of false positives and false negatives, as well as F1 score and Youden in
  rocJM().
  * several updates in the shiny app.

---------------------------------------

Changes in version: JMbayes_0.8-68

  * vignette in doc/ directory for dynamic predictions.

---------------------------------------

Changes in version: JMbayes_0.8-67

  * the shiny app for dynamic prediction now works for multivariate models.

---------------------------------------

Changes in version: JMbayes_0.8-66

  * added function for dynamic predictions from multivariate models.
  * new methods for aucJM(), rocJM() and prederrJM() for multivariate models.
  * handling of interval censored data.
  * allow for time-varying effects in the survival submodel.
  * added a vignette in the doc/ directory for multivariate models.
  * faster C++ implementation.
  * corrected issues in predVars in model.frames.

---------------------------------------

Changes in version: JMbayes_0.8-6

  * extractFrames() now correctly constructs the design matrix for hierarchical centering.

---------------------------------------

Changes in version: JMbayes_0.8-3

  * added function mvglmer() for fitting multivariate mixed models using JAGS.
  * added function mvJointModelBayes() for fitting multivariate joint models.

---------------------------------------

Changes in version: JMbayes_0.8-1

  * shiny app for dynamic predictions from mixed models.

---------------------------------------

Changes in version: JMbayes_0.8-0

  * package version for JSS paper v72i07.

---------------------------------------

Changes in version: JMbayes_0.7-9

  * aucJM() and prederrJM() now work with left truncated data.
